Updated example to meet the new version of lottus

--- a/Pipfile
+++ b/Pipfile
@@ -9,10 +9,10 @@ verify_ssl = true
 click = "==7.0"
 itsdangerous = "==1.1.0"
 jinja2 = "==2.10.1"
-lottus = {git = "https://github.com/benchambule/lottus.git",ref = "master"}
 markupsafe = "==1.1.1"
 Flask = "==1.0.3"
 Werkzeug = "==0.15.4"
+lottus = {editable = true,git = "https://github.com/benchambule/lottus.git",ref = "master"}
 
 [requires]
 python_version = "3.7"
