--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,20 @@
+certifi==2021.5.30
+charset-normalizer==2.0.1
 Click==7.0
+colorama==0.4.4
 Flask==1.0.3
+httpie==2.4.0
+idna==3.2
+importlib-metadata==4.6.1
 itsdangerous==1.1.0
 Jinja2==2.10.1
-lottus==0.0.1
+-e git+https://github.com/benchambule/lottus.git@c51c80c4b2308a3bd71690dcd25cc431a07c31dd#egg=lottus
 MarkupSafe==1.1.1
+Pygments==2.9.0
+PySocks==1.7.1
+requests==2.26.0
+requests-toolbelt==0.9.1
+typing-extensions==3.10.0.0
+urllib3==1.26.6
 Werkzeug==0.15.4
+zipp==3.5.0
